# TransformersAI

./: .env-exemplo  .gitignore  README.md  app.py  chat_integration.html  chat_widget.py  chat_widget_new.py  config_manager.py  data_collector.py  gera_modelo_new.py  index.html  install.bat  model_trainer.py  pyproject.toml  requirements.txt  training_guide.md
backup/: app.py  chat_widget.py
chat_templates/: admin_panel.html  chat_widget.html
chat_widget/: __init__.py  app.py  chatbot.py  utils.py
chat_widget/routes/: __init__.py  admin_routes.py  api_routes.py  chat_routes.py
config/: training_config_20250621_202829.json  training_config_20250621_204224.json  training_config_20250621_204651.json  training_config_20250621_204933.json  training_config_20250621_212253.json  training_config_20250621_212819.json  training_config_20250621_213533.json  training_config_20250623_114956.json
gera_modelo/: __init__.py  app.py
gera_modelo/core/: __init__.py  config_manager.py  data_collector.py  model_trainer.py
gera_modelo/routes/: __init__.py  data_routes.py  main_routes.py  training_routes.py
gera_modelo/services/: __init__.py  chat_service.py  data_service.py  training_service.py
templates/: index.html
